<resources>
    <string name="app_name">MangaFinder</string>
    <string name="bottom_navigation_menu_recherche">Finder</string>
    <string name="bottom_navigation_menu_reader">Reader</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder_synopsis">No Synopsis</string>
    <string name="titre_non_trouv">Titre invalide..</string>
    <string name="server_url">Server URL</string>
    <string name="enter_server_url">Enter server URL</string>
    <string name="port">Port</string>
    <string name="enter_port">Enter port</string>
    <string name="modifier_l_api">Modifier l\'API</string>
    <string name="l_api_ne_retourne_aucun_manga">L\'API ne retourne aucun manga</string>
    <string name="ouvrir_menu_d_importation">Ouvrir menu d\'importation</string>
    <string name="mangas_t_l_charg_s">Mangas Téléchargés</string>
    <string name="nom_de_l_anime">Nom de l\'anime</string>
    <string name="choisir_un_fichier_cbz">Choisir un fichier .cbz</string>
    <string name="aucun_fichier_s_lectionn">Aucun fichier sélectionné</string>
    <string name="importer">Importer</string>
    <string name="settings">Settings</string>
    <string name="search_waiting">Click to search!</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="nsfw">NSFW</string>
    <string name="save">Save</string>
    <string name="vous_n_avez_pas_definit_d_api_pour_le_moment">Vous n\'avez pas define d\'API pour le moment.</string>
    <string name="privacy_policy">Politique de Confidentialité</string>
    <string name="h_berger_votre_api">Héberger votre API</string>
    <string-array name="languages_array">
        <item>fr</item>
        <item>en</item>
    </string-array>
</resources>