<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <!-- Search bar and button -->
    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:background="@color/recherche"
        android:orientation="horizontal"
        android:padding="11dp">

        <ImageButton
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/settings"
            android:padding="8dp"
            android:src="@drawable/ic_settings" />

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/search_waiting"
            android:inputType="text"
            android:padding="8dp" />

        <ImageButton
            android:id="@+id/french_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/french"
            android:padding="8dp"
            android:src="@drawable/french_on" />

        <ImageButton
            android:id="@+id/english_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/english"
            android:padding="8dp"
            android:src="@drawable/english_on" />

        <ImageButton
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/search"
            android:padding="8dp"
            android:src="@drawable/ic_search" />
    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/search_layout"
        android:layout_above="@id/bottom_navigation">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_books"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="56dp" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/recherche"
        app:itemTextColor="@color/white"
        app:menu="@menu/bottom_navigation_menu" />

    <RelativeLayout
        android:id="@+id/message_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <!-- Message pour aucun manga disponible -->
        <TextView
            android:id="@+id/no_manga_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/l_api_ne_retourne_aucun_manga"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/no_api_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vous_n_avez_pas_definit_d_api_pour_le_moment"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:visibility="gone" />
    </RelativeLayout>

    <!-- Bouton en dessous du message -->
    <Button
        android:id="@+id/change_api_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modifier_l_api"
        android:layout_below="@id/message_layout"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

</RelativeLayout>